# MasterarbeitJuliusPlots

./: README.md  create_plot.py  create_plot_V2.py  pyproject.toml
data/: Dreier_Vergleich_ICPOES.xlsx  Zweier_Vergleich_LABpXRF.xlsx  Zweier_Vergleich_onSite.xlsx
