[tool.poetry]
name = "masterarbeitjuliusplots"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scipy = "^1.13.1"
numpy = "^1.26.4"
pyarrow = "^16.1.0"
openpyxl = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
